# pyderground

./: .env  .gitignore  Dockerfile.airflow  README.md  docker-compose.airflow.yml  docker-compose.minio.yml  docker-compose.yml  main.py  pyproject.toml  scan_results.json
app/: pyproject.toml
app/src/: download_files.py  s3_upload.py
dags/: vx_underground_dag.py
extracted_files/: .gitignore
src/: download_files.py  s3_upload.py  yara_scan.py
